# BlenderUpdater

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  READ_ME.txt  build_addon_zip.sh  config.example.json  pyproject.toml  setup.py  update_blend_file.sh
.github/workflows/: build-addon.yml  build-example.yml
blender_addon/: README.md  __init__.py
blender_updater/: __init__.py  __main__.py  addon.py  cli.py  mesh_operations.py  updater.py
example_project/: README.md  config.json  create_example_blend.py
example_project/parts/: cube.stl  cylinder.stl
scripts/: config.json  do_complete_assembly.py
