[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-updater"
version = "1.0.0"
description = "Update mesh models in Blender while preserving properties"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "ThunderFly-aerospace"}
]
keywords = ["blender", "3d", "mesh", "update", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/ThunderFly-aerospace/BlenderUpdater"
Repository = "https://github.com/ThunderFly-aerospace/BlenderUpdater"
"Bug Tracker" = "https://github.com/ThunderFly-aerospace/BlenderUpdater/issues"

[project.scripts]
blender-updater = "blender_updater.cli:main"

[tool.setuptools]
packages = ["blender_updater"]
